src/assets/style/_Slider.scss
@import "templates";

.slider-box{
  @include flexCenter();
  margin-bottom: 50px;
  .slider{
    width: 100%;
    height: 100%;
    border-radius: 6px;
    overflow: hidden;
    .slides{
      width: 400%;
      display: flex;
      overflow: hidden;
      .slide{
        position: relative;
        width: 25%;
        transition: 0.7s;
        @include more_1350{
          height: 850px;
        }
        @include flexCenter();
        .img{
          width: 100%;
          opacity: 0.60;
        }
        .content{
          position: absolute;
          .text{
            font-size: 36px;
            font-weight: bold;
            @include _768{
              font-size: 24px;
            }
            @include _600{
              font-size: 18px;
            }
            @include _480{
              font-size: 14px;
            }
          }
        }
      }
      input{
        display: none;
      }

    }
    .navigation-manual{
      position: absolute;
      width: 100%;
      display: flex;
      justify-content: center;
      margin-top: -40px;
      .manual-btn{
        border: 2px solid #2D9069;
        padding: 5px;
        border-radius: 10px;
        cursor: pointer;
        transition: 0.4s;
        &:hover{
          background-color: #2D9069;
        }
        &:not(:last-child){
          margin-right: 30px;
        }
      }
    }
  }
}

#radio1:checked ~ .first{
  margin-left: 0;
}
#radio2:checked ~ .first{
  margin-left: -25%;
}
#radio3:checked ~ .first{
  margin-left: -50%;
}
#radio4:checked ~ .first{
  margin-left: -75%;
}

